--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@
     fill: #fff;
     stroke: steelblue;
     stroke-width: 3px;
-    padding-right: 1000px !important;
-    padding-left: 1000px !important;
+    /* padding-right: 1000px !important;
+    padding-left: 1000px !important; */
    
 }
 
